Fix: Global footer social icons states on small screens

--- a/src/components/GlobalFooter/FooterSocial/footerSocial.sass
+++ b/src/components/GlobalFooter/FooterSocial/footerSocial.sass
@@ -20,6 +20,7 @@
       height: 100%
     .name
       display: none
+      @extend %footerItems
       +font-1()
       padding-top: 20px
       font-size: 16px
